Fixed issue of scrollbar being hidden on Autocomplete and Dropdown components

--- a/components/autocomplete/theme.css
+++ b/components/autocomplete/theme.css
@@ -53,11 +53,6 @@
   &.up {
     bottom: 0;
   }
-
-  &::-webkit-scrollbar {
-    height: 0;
-    width: 0;
-  }
 }
 
 .suggestion {
