--- a/components/dropdown/theme.css
+++ b/components/dropdown/theme.css
@@ -158,9 +158,4 @@
       cursor: not-allowed;
     }
   }
-
-  &::-webkit-scrollbar {
-    height: 0;
-    width: 0;
-  }
 }
